--- a/config/scaffolding/CustomerDADADemoPaulProject.yml
+++ b/config/scaffolding/CustomerDADADemoPaulProject.yml
@@ -12,6 +12,11 @@ packages:
   gitUrl: https://github.com/carda21
   gitUsername: carda21
   gitBranch: main
+- name: CustomerMasterServicePaulDADA
+  gitServerName: carda21
+  gitUrl: https://github.com/carda21
+  gitUsername: carda21
+  gitBranch: main
 configurationVariables:
   jdbc.jdbcTestPool.waitingThread: "0"
   jdbc.jdbcTestPool.minConns: "0"
