--- a/config/scaffolding/CustomerDADADemoPaulProject.yml
+++ b/config/scaffolding/CustomerDADADemoPaulProject.yml
@@ -8,32 +8,54 @@ packages:
   gitUsername: carda21
   gitBranch: main
 - name: CustomerMasterConnectionPaulDADA
+  version: "1.0"
   gitServerName: carda21
   gitUrl: https://github.com/carda21
   gitUsername: carda21
   gitBranch: main
 - name: CustomerMasterServicePaulDADA
+  version: "1.0"
   gitServerName: carda21
   gitUrl: https://github.com/carda21
   gitUsername: carda21
   gitBranch: main
 - name: CustomerPaulDADA
+  version: "1.0"
   gitServerName: carda21
   gitUrl: https://github.com/carda21
   gitUsername: carda21
   gitBranch: main
+services:
+- serviceName: project.customerdadademopaul.integrations:getCustomerById
+  packages:
+  - name: CustomerDADADemoPaulProject
+    version: "1.0"
+  - name: CustomerMasterServicePaulDADA
+    version: "1.0"
+  - name: CustomerPaulDADA
+    version: "1.0"
+  - name: CustomerMasterConnectionPaulDADA
+    version: "1.0"
+  - name: WmJDBCAdapter
+    version: 10.3.0.0.34
+    wpmServer: https://packages.webmethods.io
+    wpmRegistry: licensed
+- serviceName: customerMasterServicePaulDADA.adapter:getCustomerById
+  packages:
+  - name: CustomerMasterServicePaulDADA
+    version: "1.0"
 configurationVariables:
   jdbc.jdbcTestPool.waitingThread: "0"
   jdbc.jdbcTestPool.minConns: "0"
-  jdbc.jdbcTestPool.snoopenabled: "false"
   jdbc.jdbcTestPool.expireTime: "60000"
   jdbc.jdbcTestPool.snoopparms: ddtdbg.ProtocolTraceEnable=true;ddtdbg.ProtocolTraceMaxline=16;ddtdbg.ProtocolTraceLocation=logs/snoop/jdbcTestPool.log;ddtdbg.ProtocolTraceShowTime=true
+  jdbc.jdbcTestPool.maxConns: "10"
+  jdbc.jdbcTestPool.userid: root
+  jdbc.jdbcTestPool.driverAlias: MySQL Database Java Connector Driver
+  jdbc.jdbcTestPool.spyenabled: "false"
+  jdbc.jdbcTestPool.snoopenabled: "false"
   jdbc.jdbcTestPool.password: "{AES}er+I3U8nDVm8F4DBRST1+A=="
   jdbc.jdbcTestPool.spyparms: SpyAttributes=(log=(file)logs/spy/jdbcTestPool.log;logTName=yes;timestamp=yes)
   jdbc.jdbcTestPool.dbURL: jdbc:mysql://mysql.test.local:3306/webm
   jdbc.jdbcTestPool.poolThreshold: "0"
-  jdbc.jdbcTestPool.maxConns: "10"
-  jdbc.jdbcTestPool.userid: root
-  jdbc.jdbcTestPool.driverAlias: MySQL Database Java Connector Driver
   jdbc.jdbcTestPool.useSSL: "false"
-  jdbc.jdbcTestPool.spyenabled: "false"
