--- a/config/scaffolding/CustomerDADADemoPaulProject.yml
+++ b/config/scaffolding/CustomerDADADemoPaulProject.yml
@@ -52,6 +52,10 @@ services:
   packages:
   - name: WmPublic
     version: 11.1.0.0.2040
+- serviceName: pub.flow:debugLog
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2040
 configurationVariables:
   jdbc.jdbcTestPool.waitingThread: "0"
   jdbc.jdbcTestPool.minConns: "0"
